--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -6,6 +6,8 @@
 
     <title><%= title %></title>
     <link rel='stylesheet' href='/vendor/bootstrap/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='/css/style.css' />
+
     <script src="/vendor/jquery/jquery-2.1.3.min.js"></script>
     <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
 
@@ -15,7 +17,8 @@
     <![endif]-->
   </head>
   <body>
-    <%- partial('header.ejs') %>
-    <%- body %>
+    <div class="container-fluid">
+      <%- partial('header.ejs') %>
+      <%- body %>
   </body>
 </html>
