--- a/views/backup.ejs
+++ b/views/backup.ejs
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel='stylesheet' href='/vendor/bootstrap/css/bootstrap.min.css' />
+    <link rel='stylesheet' href='/css/style.css' />
+
+    <script src="/vendor/jquery/jquery-2.1.3.min.js"></script>
+    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
+
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <![endif]-->
   </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+  <body class="login">
+    <div class="container">
+      <form class="form-signin">
+        <label for="inputEmail" class="sr-only">아이디</label>
+        <input type="email" id="inputEmail" class="form-control" placeholder="아이디" required autofocus>
+        <label for="inputPassword" class="sr-only">비밀번호</label>
+        <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호" required>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" value="remember-me">기억하기</input>
+          </label>
+        </div>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">로그인</button>
+      </form>
+
+    </div> <!-- /container -->
   </body>
 </html>
