--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,37 +1,8 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/vendor/bootstrap/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/css/style.css' />
-
-    <script src="/vendor/jquery/jquery-2.1.3.min.js"></script>
-    <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
-
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-  </head>
-  <body class="login">
-    <div class="container">
-      <form class="form-signin">
-        <h2 class="form-signin-heading">로그인</h2>
-        <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-        <div class="checkbox">
-          <label>
-            <input type="checkbox" value="remember-me"> Remember me
-          </label>
-        </div>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-
-    </div> <!-- /container -->
-  </body>
-</html>
+<% layout('layout') %>
+<div class="container">
+  <form method="post" action="/users" class="form-signin">
+    <input type="text" name="username" class="form-control" placeholder="아이디" required autofocus>
+    <input type="password" name="pass" class="form-control" placeholder="비밀번호" required>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">로그인</button>
+  </form>
+</div> <!-- /container -->
